--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### your site title here
 
 title: Helios Ocaña
-description: Investigo y divulgo sobre metales.
+description: Investigo, divulgo y a veces programo.
 
 baseurl: "" #name of GitHub repository
 url: "https://heliouz.github.io" #custom url to be used instead of GitHub repository
