--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ paginate_path: /blog/page:num/
 
 # Social media links in footer
 twitter: "heliouz__"
-tiktok: "heliouz_"
+tiktok: ""
 instagram: "heliouz_"
 
 
