--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ collections:
       - shortProject.md
       - bigaku.md
       - redirect.md
-      - project4.md
+      - qpqt.md
       - project5.md
       - project6.md
 
