--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Helios O.
 description: Investigo, divulgo y a veces programo.
 
 baseurl: "" #name of GitHub repository
-url: "https://heliouz.github.io" #custom url to be used instead of GitHub repository
+url: "https://heliouz.com" #custom url to be used instead of GitHub repository
 email: #
 
 # Pagination
